# balls

./: .gitignore  CMakeLists.txt  README.md  main  main.c
.github/workflows/: build-deploy.yml
include/: collision.h  game.h  gui.h  raygui.h
src/: collision.c  game.c  gui.c  main.c
windows/: run.ps1
